--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -105,3 +105,13 @@ nav ul li a:hover:after{
         margin-left: 67%;
         margin-top: -13%;
     }
+    @media only screen and (min-width: 1025px) and (max-width: 1280px) {
+        /* Styles for small laptops */
+    }
+    
+    @media only screen and (min-width: 1281px) and (max-width: 1440px) {
+        /* Styles for large laptops and small desktops */
+    }
+    @media only screen and (min-width: 480px) and (max-width: 767px) {
+        /* Styles for large mobile devices */
+    }
